--- a/src/std/stdH.html
+++ b/src/std/stdH.html
@@ -5,9 +5,8 @@
 
 <html>
   <!-- 
-    HEADER 
+    Standard Headers 
   -->
   <head>
     <link rel="stylesheet" type="text/css" href="core.css"/>
-    <link rel="stylesheet" type="text/css" href="side.css"/>
 
